<?xml version="1.0"?>
<package>
  <name>dbow2_ros</name>
  <version>0.0.0</version> 
  <description>dbow2_ros</description>
  <maintainer email="matias@robots.ox.ac.uk">tcies</maintainer>

  <license>Closed</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_external_project_catkin</build_depend>
</package>